# World-Economics

./: .gitignore  Dockerfile  README.md  api.py  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/world_economics/: crew.py  main.py
src/world_economics/config/: agents.yaml  tasks.yaml
